# irc2dc

./: AUTHORS  CONTRIBUTORS  ChangeLog  Makefile.am  Makefile.in  README.md  TODO  aclocal.m4  config.h.in  configure  configure.in
autom4te.cache/: output.0  requests  traces.0
src/: Makefile.am  Makefile.in  config.cpp  config.h  connection.cpp  connection.h  dcclient.cpp  dcclient.h  dcconfig.cpp  dcconfig.h  dcconnection.cpp  dcconnection.h  dctest.cpp  defs.cpp  defs.h  irc2dc.conf.dist  ircclient.cpp  ircclient.h  ircconfig.cpp  ircconfig.h  ircconnection.cpp  ircconnection.h  irctest.cpp  main.cpp  translator.cpp  translator.h
